# hypo-inventory-api

./: .gitignore  Dockerfile  README.md  database.db  pyproject.toml  run.sh
src/app/: __main__.py
src/app/api/v1/: index.py  inventory.py
src/app/db/: schema.py
src/app/models/: inventory.py
src/app/services/: inventory_service.py
tests/: conftest.py
tests/api/v1/: test_inventory.py
tests/db/: test_schema.py
